# RAG-Chatbot

./: .gitignore  docker-compose.yml  list_models.py  test_ai_connection.py  test_full_rag_logic.py
backend/: .env.example  .gitignore  Dockerfile  README.md  ai_service.py  database.py  main.py  models.py  pyproject.toml  reset_db.py  utils.py
frontend/: LEARNING_GUIDE.md  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Chat.tsx  DocumentUpload.tsx  ErrorBoundary.tsx  MessageInput.tsx  MessageList.tsx  SourceTag.tsx
frontend/src/hooks/: useChat.ts
frontend/src/services/: api.ts
frontend/src/types/: index.ts
frontend/src/utils/: format.tsx
